--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keycloak-mock-oyk",
+  "name": "@ouwyukha/keycloak-mock",
   "version": "1.0.10",
   "description": "Keycloak server mock for Node.js",
   "main": "dist/index.js",
